--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --hot",
-    "build": "rm -rf public && NODE_ENV=production webpack"
+    "build": "rm -rf public && NODE_ENV=production webpack",
+    "build:verbose": "rm -rf public && NODE_ENV=production webpack --verbose -p"
   },
   "author": "",
   "license": "ISC",
