--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "style-loader": "^0.16.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   }
