--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --hot",
-    "build": "rm -rf public && NODE_ENV=production webpack",
-    "build:verbose": "rm -rf public && NODE_ENV=production webpack --verbose -p"
+    "build": "rm -rf public && NODE_ENV=production webpack"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +14,7 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015": "^6.24.0",
@@ -23,6 +23,8 @@
     "css-loader": "^0.27.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "postcss-loader": "^1.3.3",
+    "precss": "^1.4.0",
     "style-loader": "^0.16.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
