--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --inline --hot",
-    "build": "rm -rf public && NODE_ENV=production webpack"
+    "build": "rm -rf public && NODE_ENV=production webpack",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +29,7 @@
     "precss": "^1.4.0",
     "style-loader": "^0.16.0",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "webpack-dev-server": "^2.4.1",
+    "@storybook/react": "^3.1.8"
   }
 }
